# Q-A-Document-Rag-System

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
api/: main.py
frontend/: app.py
src/: chain.py  ingest.py
